- Reorganized UI of stylist (with german translation ig got much too wide)
- Started implementing spellchecking

Reggie, 28.12.1998:
-------------------
- More work on spell checking
- Started with the tab for tabulator settings in the parag layout dia
- Some small fixes

Reggie, 29.12.1998:
-------------------
- Fixes with tabulators and moving/resizing frames/borders

Reggie, 30.12.1998:
-------------------
- Cleanups
- Implemented internals for searching and replacing text (will be used for autoformat too)

Reggie, 1.1.1999:
-----------------
- More work on searching and replacing text (internals seems to work now - only the dialog is missing :-)

Reggie, 3.1.1999:
-----------------
- Started with search & replace dialog
- Simple searching (without formats) with the dialog works

Reggie, 4.1.1999:
-----------------
- Implemented searching with formats
- Lots of fixes (updating the rulers seems to work correctly now :-)

Reggie, 5.1.1999:
-----------------
- Fixes
- Searching for whole words only works now

Reggie, 6.1.1998:
-----------------
- Fixed this annoying redraw bug when deleting text. If you delete text in a frame the overlapping frames are not
  deleted (on the screen) anymore
- Fixed some more redraw bugs
- Last imput in the search dia is remembered
- Implemented searching backwards (also with formats)

Reggie, 7.1.1999:
-----------------
- Added filedialog preview widgets for pictures and cliparts
- Started with replacing text (with the dialog - somehow I have to decrease the size of this dialog)

Reggie, 8.1.1999:
-----------------
- Decreased size of search/replace dialog a bit
- It's possible to use regular expressions and wildcards for searching now
- Initialization of vertical ruler works correctly now too
- More work on internal stuff for replacing text

Reggie, 9.1.1999:
-----------------
- Some more work on replacing text

Reggie, 10.1.1999:
------------------
- Fixed some memory leak producing code
- Find&Replacing works (with formats)